2007-11-08  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/editor.c, src/utils.c, src/utils.h:
   Remove unused unnecessary function utils_btoa().


2007-11-07  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/vte.c: Apply patch from Simone Denei to add a "Restart" item to
              the VTE popup menu in case running application hangs.
 * src/utils.c: Fix bug when creating configuration directory on Unix.
 * tagmanager/tm_work_object.c, tagmanager/tm_workspace.c:
   Don't create tagmanager status file, seems to be unnecessary
   (needs testing).


2007-11-06  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/build.c: Enable stopping of Run command on Windows.
 * src/build.c: Quote first element of command line when using Compile,
                Build and Make commands on Windows to avoid problems
                if the tools are specified with full path.


2007-11-06  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * plugins/svndiff.c:
   Fix sign comparison warning.
 * plugins/svndiff.c:
   Fix gtk_widget_destroy() warning when unloading plugin and no svn
   binary is in $PATH.
 * plugins/svndiff.c:
   Add menu separator so users don't accidentally click revert and lose
   all their work.
   Capitalize revert menu item.
 * src/interface.c, src/callbacks.c, src/callbacks.h, geany.glade:
   Add 'Strip Trailing Spaces' document menu item.
 * src/keybindings.c, src/keybindings.h, src/plugindata.h, TODO:
   Make VTE interpret all keyboard shortcuts except for focus group
   keybindings.
   Add enum values for keybinding groups.
   Make Notebook tabs keybindings group.
   Move Go to tags items into Tags keybindings group.
   Move navigation items into a new Other keybindings group.
 * HACKING, data/filetypes.restructuredtext:
   Add a default configuration file for reStructuredText.
 * src/document.c:
   Allow scrolling past end of document, so the user can append text