@@ -1,3 +1,12 @@
+2007-11-08  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
+
+ * src/prefs.c:
+   Separate keybindings tree setup code from prefs_init_dialog(); use
+   enum for tree model columns.
+   Ask the user whether to override an existing keybinding when setting
+   a combination that is already in use.
+
+
 2007-11-08  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
 
  * src/editor.c, src/utils.c, src/utils.h:
